--- a/static/fontello-a0cc65b5/config.json
+++ b/static/fontello-a0cc65b5/config.json
@@ -47,6 +47,12 @@
       "css": "crown",
       "code": 59460,
       "src": "fontelico"
+    },
+    {
+      "uid": "lnyme20kl7kh26it9yrqk7at10k6i0sf",
+      "css": "award",
+      "code": 59396,
+      "src": "modernpics"
     }
   ]
 }
